--- a/demo/index.html
+++ b/demo/index.html
@@ -225,31 +225,31 @@
 
             const encoder = device.createCommandEncoder();
 
-            clusterRenderer.encodeIndirect(
-                encoder,
-                params.renderSettings.lod,
-                resolutionDependentStuff.backBufferView,
-                resolutionDependentStuff.depthBufferView,
-            );
-
-            /*
-            const geometryPass = encoder.beginRenderPass({
-                colorAttachments: [{
-                    view: resolutionDependentStuff.backBufferView,
-                    clearValue: [0, 0, 0, 1],
-                    loadOp: 'clear',
-                    storeOp: 'store',
-                }],
-                depthStencilAttachment: {
-                    view: resolutionDependentStuff.depthBufferView,
-                    depthClearValue: 0.0, // reverse z
-                    depthLoadOp: 'clear',
-                    depthStoreOp: 'store',
-                },
-            });
-            clusterRenderer.encode(geometryPass, params.renderSettings.lod);
-            geometryPass.end();
-             */
+            if (params.renderSettings.drawDirect) {
+                const geometryPass = encoder.beginRenderPass({
+                    colorAttachments: [{
+                        view: resolutionDependentStuff.backBufferView,
+                        clearValue: [0, 0, 0, 1],
+                        loadOp: 'clear',
+                        storeOp: 'store',
+                    }],
+                    depthStencilAttachment: {
+                        view: resolutionDependentStuff.depthBufferView,
+                        depthClearValue: 0.0, // reverse z
+                        depthLoadOp: 'clear',
+                        depthStoreOp: 'store',
+                    },
+                });
+                clusterRenderer.encode(geometryPass, params.renderSettings.lod);
+                geometryPass.end();
+            } else {
+                clusterRenderer.encodeIndirect(
+                    encoder,
+                    params.renderSettings.lod,
+                    resolutionDependentStuff.backBufferView,
+                    resolutionDependentStuff.depthBufferView,
+                );
+            }
 
             const pass = encoder.beginRenderPass({
                 colorAttachments: [{
