--- a/demo/index.html
+++ b/demo/index.html
@@ -61,8 +61,9 @@
 
         const cameraController = new FPSCameraController(canvas);
 
+        const fovRad = 45.0 * (Math.PI / 180.0);
         const projection = mat4n.perspectiveReverseZ(
-            45.0 * (Math.PI / 180.0),
+            fovRad,
             resolution[0] / resolution[1],
             1.0,
         );
@@ -158,7 +159,7 @@
             canvas.height = resolution[1];
 
             resolutionDependentStuff.projection = mat4n.perspectiveReverseZ(
-                45.0 * (Math.PI / 180.0),
+                fovRad,
                 resolution[0] / resolution[1],
                 1.0,
             );
@@ -220,7 +221,8 @@
                     position: cameraController.position,
                 },
                 {instances: [mat4n.identity()]}, //[mat4n.scaling(clusterScale)]});
-                params.renderSettings.updateCullingCamera
+                {cotHalfFov: 1.0 / Math.tan(fovRad / 2.0), viewHeight: resolution[1], threshold: params.renderSettings.errorThreshold},
+                params.renderSettings.updateCullingCamera,
             );
 
             const encoder = device.createCommandEncoder();
