--- a/demo/index.html
+++ b/demo/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meshlet Playground</title>
+    <title>Tri Chi Playground</title>
 </head>
 <body>
 <div class="container">
@@ -11,19 +11,20 @@
     <div id="ui" style="position: absolute; right: 0; z-index: 1;"></div>
 </div>
 
-<script src="https://wgpu-matrix.org/dist/3.x/wgpu-matrix.min.js"></script>
-
 <script type="module">
-    import {vec3n, mat4n, quatn} from 'https://wgpu-matrix.org/dist/3.x/wgpu-matrix.module.min.js';
+    import TrichiJs from './trichi/trichi-wasm.js';
+
+    import {vec3n, mat4n} from 'https://wgpu-matrix.org/dist/3.x/wgpu-matrix.module.min.js';
     import {FPSCameraController} from './fps-camera.js';
     import {makeUi} from './ui.js';
     import {webgpuNotSupported} from './util.js';
     import {makeClusterRenderer} from './cluster-renderer.js';
+    import {mesh} from './demo-mesh.js';
 
     const urlParams = new URLSearchParams(window.location.search);
     const useTimestampQuery = urlParams.has('timestamp_query');
 
-    async function main() {
+    async function main(trichi) {
         if (!('gpu' in navigator)) {
             webgpuNotSupported();
             return;
@@ -136,10 +137,7 @@
             ],
         });
 
-        const clusterRenderer = makeClusterRenderer(device, backBuffer.format, depthBuffer.format, true);
-        const clusterScale = Array(3).fill(0).map((_, i) => {
-            return (1.0 / (clusterRenderer.aabb.max[i] - clusterRenderer.aabb.min[i]));
-        });
+        const clusterRenderer = makeClusterRenderer(device, backBuffer.format, depthBuffer.format, mesh, true);
 
         const resolutionDependentStuff = {
             projection,
@@ -212,6 +210,82 @@
             timeout = setTimeout(handleResize, 250);
         });
 
+        let transform = mat4n.identity();
+        let radiusScale = 1.0;
+
+        // todo: debounce
+        // todo: load in worker
+        const dropZoneId = 'container';
+        ['dragenter', 'dragover', 'drop'].forEach(eventName => {
+            window.addEventListener(eventName, e => {
+                if (e.target.id !== dropZoneId) {
+                    e.preventDefault();
+                    if (eventName === 'drop') {
+                        e.dataTransfer.dropEffect = 'move';
+                        Promise.all([...e.dataTransfer.items]
+                            .filter(i => i.kind === 'file')
+                            .map(async f => {
+                                const file = f.getAsFile();
+                                return { name: file.name, bytes: new Uint8Array(await file.arrayBuffer()) };
+                            })
+                        ).then(files => {
+                            if (files.length === 0) {
+                                return;
+                            }
+
+                            console.log('processing', files[0].name);
+
+                            const trichiParams = {
+                                maxVerticesPerCluster: 64,
+                                maxTrianglesPerCluster: 128,
+                                clusterConeWeight: 0.0,
+                                targetClustersPerGroup: 4,
+                                maxHierarchyDepth: 25,
+                                threadPoolSize: 1,
+                                storeHierarchy: true,
+                            };
+                            const newMesh = trichi.buildTriangleClusterHierarchyFromFileBlob(
+                                files[0].name,
+                                files[0].bytes,
+                                trichiParams,
+                            );
+
+                            const aabb = {
+                                min: [newMesh.vertices[0], newMesh.vertices[1], newMesh.vertices[2]],
+                                max: [newMesh.vertices[0], newMesh.vertices[1], newMesh.vertices[2]],
+                            };
+                            for (let i = 3; i < newMesh.vertices.length; i += 3) {
+                                aabb.min[0] = Math.min(aabb.min[0], newMesh.vertices[i]);
+                                aabb.min[1] = Math.min(aabb.min[1], newMesh.vertices[i + 1]);
+                                aabb.min[2] = Math.min(aabb.min[2], newMesh.vertices[i + 2]);
+                                aabb.max[0] = Math.max(aabb.max[0], newMesh.vertices[i]);
+                                aabb.max[1] = Math.max(aabb.max[1], newMesh.vertices[i + 1]);
+                                aabb.max[2] = Math.max(aabb.max[2], newMesh.vertices[i + 2]);
+                            }
+
+                            const diag = [
+                                aabb.max[0] - aabb.min[0],
+                                aabb.max[1] - aabb.min[1],
+                                aabb.max[2] - aabb.min[2],
+                            ];
+                            const scalingFactor = 10.0 / Math.max(...diag);
+                            const trans = mat4n.multiply(
+                                mat4n.uniformScaling(scalingFactor),
+                                mat4n.translation([-diag[0] / 2, -diag[1] / 2, -diag[2] / 2]),
+                            );
+
+                            newMesh.numMeshlets = newMesh.clusters.length / 4;
+
+                            clusterRenderer.newMesh(newMesh);
+                            transform = trans;
+                            radiusScale = scalingFactor;
+                            cameraController.reset({});
+                        });
+                    }
+                }
+            }, false);
+        });
+
         const params = makeUi(clusterRenderer.numLods);
 
         let lastTime = new Date();
@@ -237,8 +311,12 @@
                     projection: resolutionDependentStuff.projection,
                     position: cameraController.position,
                 },
-                {instances: [mat4n.identity()]},
-                {...resolutionDependentStuff.errorProjectionParams, threshold: params.renderSettings.errorThreshold},
+                {instances: [transform]},
+                {
+                    ...resolutionDependentStuff.errorProjectionParams,
+                    threshold: params.renderSettings.errorThreshold,
+                    radiusScale
+                },
                 params.renderSettings.updateCullingCamera,
             );
 
@@ -264,7 +342,6 @@
             } else {
                 clusterRenderer.encodeIndirect(
                     encoder,
-                    params.renderSettings.lod,
                     resolutionDependentStuff.backBufferView,
                     resolutionDependentStuff.depthBufferView,
                 );
@@ -290,7 +367,7 @@
         render();
     }
 
-    main();
+    new TrichiJs().then(main);
 </script>
 </body>
 </html>
