--- a/demo/index.html
+++ b/demo/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tri Chi Playground</title>
+    <script src="coi-serviceworker.min.js"></script>
 </head>
 <body>
 <div class="container">
