--- a/demo/index.html
+++ b/demo/index.html
@@ -15,7 +15,7 @@
 <script type="module">
     import * as Comlink from "https://unpkg.com/comlink/dist/esm/comlink.mjs";
 
-    import {vec3n, mat4n} from 'https://wgpu-matrix.org/dist/3.x/wgpu-matrix.module.min.js';
+    import {mat4n} from 'https://wgpu-matrix.org/dist/3.x/wgpu-matrix.module.min.js';
     import {FPSCameraController} from './fps-camera.js';
     import {makeUi} from './ui.js';
     import {webgpuNotSupported, showStatusMessage} from './util.js';
@@ -150,14 +150,14 @@
             isProcessingModel = true;
             try {
                 dialogBox = showStatusMessage('Loading 3D model ...');
-                const m = await import('./Highpoly_2.1Mill_single_object.obj.js');//'https://jolifantobambla.github.io/trichi/demo-mesh.js');
+                const m = await import('https://jolifantobambla.github.io/trichi/demo-mesh.js');
                 clusterRenderer.newMesh(m.mesh);
+                hasMesh = true;
             } catch (e) {
                 console.log(e);
             }
             dialogBox.close();
             dialogBox = null;
-            hasMesh = true;
             isProcessingModel = false;
         })();
 
